Fix alignment of LanguagePicker

--- a/app/assets/stylesheets/modules/_language_picker.styl
+++ b/app/assets/stylesheets/modules/_language_picker.styl
@@ -1,8 +1,6 @@
 .language-picker
-  margin-top -5px
-  margin-bottom -5px
   text-align left
-  width 100px
+  width 120px
 
   img
   	width 22px
@@ -17,4 +15,5 @@
     top 15px
     right 15%
     padding-right 0px
-    width 120px
+    margin-top -5px
+    margin-bottom -5px
